# STLSoft-1.11

./: .gitignore  AUTHORS.md  CHANGES.txt  CMakeLists.txt  EXAMPLES.md  FAQ.md  Gemfile  HISTORY.md  HOW_YOU_CAN_HELP.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  NEWS.md  README.md  TODO.md  build_cmake.sh  clean_cmake.sh  execute_performance_tests.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_scratch_tests.cmd  run_all_scratch_tests.sh  run_all_unit_tests.cmd  run_all_unit_tests.sh
examples/by_library/: CMakeLists.txt
examples/by_library/com_utility/: CMakeLists.txt
examples/by_library/com_utility/creation_functions/: CMakeLists.txt  creation_functions.cpp
examples/by_library/com_utility/rot_functions/: CMakeLists.txt  rot_functions.cpp
examples/by_library/containers/: CMakeLists.txt
examples/by_library/containers/unicode_point_map/: CMakeLists.txt  main.cpp
examples/by_library/conversion/: CMakeLists.txt
examples/by_library/conversion/interface_cast/: CMakeLists.txt  interface_cast.cpp
examples/by_library/conversion/sap_cast/: CMakeLists.txt  sap_cast.cpp
examples/by_library/conversion/union_cast/: CMakeLists.txt  union_cast.cpp
examples/by_library/diagnostics/: CMakeLists.txt
examples/by_library/diagnostics/processtimes_stopwatch/: CMakeLists.txt  processtimes_stopwatch.cpp
examples/by_library/diagnostics/stopwatch/: CMakeLists.txt  main.cpp  stopwatch.cpp
examples/by_library/memory/: CMakeLists.txt
examples/by_library/memory/auto_buffer/: CMakeLists.txt  auto_buffer.cpp
examples/by_library/memory/com_memory_functions/: CMakeLists.txt  com_memory_functions.cpp
examples/by_library/memory/heapwalk_sequence/: CMakeLists.txt  heapwalk_sequence.cpp
examples/by_library/synch/: CMakeLists.txt
examples/by_library/system/: CMakeLists.txt
examples/by_library/system/pid_sequence/: CMakeLists.txt  main.cpp
examples/by_library/windows_clipboard/: CMakeLists.txt
examples/by_library/windows_clipboard/clipboard_format_sequence/: CMakeLists.txt  clipboard_format_sequence.cpp
examples/by_library/windows_clipboard/clipboard_scope/: CMakeLists.txt  clipboard_scope.cpp
examples/by_library/windows_control_panel/: CMakeLists.txt
examples/by_library/windows_control_panel/windows_control_panel/: CMakeLists.txt  windows_control_panel.cpp
examples/by_library/windows_registry/: CMakeLists.txt
examples/by_library/windows_registry/enum_values/: CMakeLists.txt  enum_values.cpp
examples/by_library/windows_registry/registry_functions/: CMakeLists.txt  registry_functions.cpp
examples/by_library/windows_shell/: CMakeLists.txt
examples/by_library/windows_shell/memory_functions/: CMakeLists.txt  memory_functions.cpp
examples/by_library/windows_shell/shell_functions/: CMakeLists.txt  shell_functions.cpp
examples/by_library/windows_toolhelp/: CMakeLists.txt
examples/by_library/windows_toolhelp/module_sequence/: CMakeLists.txt  module_sequence.cpp
examples/by_library/windows_toolhelp/process_sequence/: CMakeLists.txt  process_sequence.cpp
examples/by_project/: CMakeLists.txt
examples/by_project/comstl/: CMakeLists.txt  comstl.cpp
examples/by_project/platformstl/: CMakeLists.txt
examples/by_project/platformstl/filesystem/: CMakeLists.txt
examples/by_project/unixstl/: CMakeLists.txt
examples/by_project/unixstl/dl/: CMakeLists.txt
examples/by_project/unixstl/filesystem/: CMakeLists.txt
examples/by_project/unixstl/system/: CMakeLists.txt
examples/by_project/winstl/: CMakeLists.txt
examples/by_project/winstl/diagnostics/: CMakeLists.txt
examples/by_project/winstl/dl/: CMakeLists.txt
examples/by_project/winstl/filesystem/: CMakeLists.txt
examples/by_project/winstl/i18n/: CMakeLists.txt
examples/unixstl/filesystem/readdir_sequence/: CMakeLists.txt  main.cpp
examples/winstl/filesystem/findfile_sequence/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/component/: CMakeLists.txt
test/component/inetstl/: CMakeLists.txt
test/component/inetstl/util/: CMakeLists.txt
test/component/platformstl/: CMakeLists.txt
test/component/platformstl/diagnostics/: CMakeLists.txt
test/component/platformstl/system/: CMakeLists.txt
test/component/stlsoft/: CMakeLists.txt
test/component/stlsoft/system/: CMakeLists.txt
test/component/unixstl/: CMakeLists.txt
test/component/unixstl/dl/: CMakeLists.txt
test/component/unixstl/filesystem/: CMakeLists.txt
test/component/unixstl/system/: CMakeLists.txt
test/component/winstl/: CMakeLists.txt
test/component/winstl/dl/: CMakeLists.txt
test/fixtures/: CMakeLists.txt
test/fixtures/example_so/: CMakeLists.txt  entry.cpp
test/performance/: CMakeLists.txt
test/performance/test.performance.platformstl.stopwatch/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.auto_buffer/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.conversion.integer_to_string/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.count_digits/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.doomgram/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.frequency_map/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.gram_utils/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.simple_string.compare/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.simple_string.contains_etc/: CMakeLists.txt  main.cpp
test/performance/test.performance.stlsoft.simple_string.op_eq/: CMakeLists.txt  main.cpp
test/scratch/: CMakeLists.txt
test/scratch/stlsoft/: CMakeLists.txt
test/scratch/unixstl/: CMakeLists.txt
test/scratch/versions/: CMakeLists.txt
test/scratch/winstl/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/comstl/: CMakeLists.txt
test/unit/inetstl/: CMakeLists.txt
test/unit/mfcstl/: CMakeLists.txt
test/unit/platformstl/: CMakeLists.txt
test/unit/stlsoft/: CMakeLists.txt
test/unit/test.unit.versions/: CMakeLists.txt  entry.cpp
test/unit/unixstl/: CMakeLists.txt
test/unit/winstl/: CMakeLists.txt
(+1182 files in other folders)
