# SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
add_subdirectory(containers)
add_subdirectory(conversion)
add_subdirectory(diagnostics)
add_subdirectory(filesystem)
add_subdirectory(limits)
add_subdirectory(memory)
add_subdirectory(smartptr)
add_subdirectory(string)
add_subdirectory(traits)
add_subdirectory(util)
