# SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
add_subdirectory(test.component.unixstl.filesystem.glob_sequence)
add_subdirectory(test.component.unixstl.filesystem.memory_mapped_file)
add_subdirectory(test.component.unixstl.filesystem.readdir_sequence)
add_subdirectory(test.component.unixstl.filesystem.readonly_memory_mapped_file)
