
add_subdirectory(number)

add_subdirectory(test.unit.stlsoft.conversion.byte_format_functions)
add_subdirectory(test.unit.stlsoft.conversion.integer_to_base32_string)
add_subdirectory(test.unit.stlsoft.conversion.integer_to_base36_string)
add_subdirectory(test.unit.stlsoft.conversion.integer_to_lc_string)


# ############################## end of file ############################# #

