# SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
add_subdirectory(test.unit.stlsoft.memory.auto_buffer)
add_subdirectory(test.unit.stlsoft.memory.malloc_allocator)
add_subdirectory(test.unit.stlsoft.memory.new_allocator)
add_subdirectory(test.unit.stlsoft.memory.null_allocator)

