# SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
add_subdirectory(test.unit.stlsoft.string.copy_functions)
add_subdirectory(test.unit.stlsoft.string.exception_string)
add_subdirectory(test.unit.stlsoft.string.shim_string)
add_subdirectory(test.unit.stlsoft.string.simple_string)
add_subdirectory(test.unit.stlsoft.string.static_string)
add_subdirectory(test.unit.stlsoft.string.string_slice)
add_subdirectory(test.unit.stlsoft.string.string_view)
