# SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
add_subdirectory(test.unit.winstl.memory.global_allocator)
add_subdirectory(test.unit.winstl.memory.netapi_allocator)
add_subdirectory(test.unit.winstl.memory.processheap_allocator)
add_subdirectory(test.unit.winstl.memory.shell_allocator)

